Boas praticas apliacadas antes de continuar